refactor(demo): remove unused Mojang API, metadata models, and platform-specific HTTP clients
Removed obsolete Mojang API and metadata models from the `demo` launcher module. Consolidated asset/download handling with the Mojang distribution metadata module. Updated required Java version and normalized metadata mapping to align with the redesigned schema.